# sfml-projects

./: README.md
sfml-labyOO/: .gitignore  CMakeLists-mac.txt.example  CMakeLists-windows.txt.example  CMakeLists.txt  commandsmac.txt  commandwindows.txt  installerscript.nsi
sfml-labyOO/include/: animation.h  assetsmanager.h  button.h  customStructures.h  endgamestate.h  endscreen.h  enemy.h  entity.h  game.h  gameoverscreen.h  gameoverstate.h  gamestate.h  graphicssettings.h  gui.h  mainmenustate.h  mainscreen.h  map.h  menuscreen.h  menustate.h  pausemenu.h  player.h  screen.h  screensmanager.h  settingsstate.h  startscreen.h  state.h  stdHeader.h
sfml-labyOO/src/: animation.cpp  appicon.rc  assetsmanager.cpp  button.cpp  endgamestate.cpp  endscreen.cpp  enemy.cpp  entity.cpp  game.cpp  gameoverscreen.cpp  gameoverstate.cpp  gamestate.cpp  graphicssettings.cpp  gui.cpp  main.cpp  mainmenustate.cpp  mainscreen.cpp  map.cpp  menuscreen.cpp  menustate.cpp  pausemenu.cpp  player.cpp  screen.cpp  screensmanager.cpp  settingsstate.cpp  startscreen.cpp  state.cpp  stdHeader.cpp
sfml-labyOO/src/config/: gamestate_keybinds.ini  graphics.ini  supported_keys.ini  window.ini
sfml-labyOO/src/images/: background.psd  enemy.psd  gameoverscreen.psd  perso.psd
sfml-labyrinth/: .gitignore  CMakeLists.txt
sfml-labyrinth/src/: main.cpp  prog
